# taskyto

./: .gitignore  README.md  engine.py  environment.yml  eval.py  healthy_ai.py  healthy_workflow.py  main.py  modules.py  pyproject.toml  requirements-local.txt  requirements.txt  run-dump.bat  run-test.bat  run.bat  spec.py  utils.py
.github/workflows/: python-test.yml
conga_examples/: Homie.bot  your_song.bot
examples/bike-shop/: bike_qa.yaml  make_appointment.yaml
examples/conga/: escaperoom.bot
examples/llm_server/: llm.py
examples/manual/bike-shop/: bike_modules.py  bike_shop.py
examples/manual/healthy-ai/: healthy_ai.py  healthy_workflow.py
examples/smart_calculator/: calculator.yaml
examples/song-recommender/: genres.yaml
examples/yaml/: make_appointment.yaml  vetcen_qa.yaml  workflow.yaml
examples/yaml/EPS-academic-helper/: eps_qa.yaml  top_level.yaml
examples/yaml/bartender/: bar_qa.yaml  order.yaml  top_level.yaml
examples/yaml/bike-shop/: bike_qa.yaml  make_appointment.yaml  top_level.yaml
examples/yaml/personal/: john_qa.yaml  top_level.yaml
examples/yaml/photography/: call_appointment.yaml  estimate.py  estimate_price.yaml  photo_qa.yaml  session_details.yaml  top_level.yaml
examples/yaml/pizza-order/: calculate_price_custom.py  calculate_price_custom.yaml  calculate_price_predefined.py  calculate_price_predefined.yaml  calculate_ticket_custom.py  calculate_ticket_custom.yaml  calculate_ticket_predefined.py  calculate_ticket_predefined.yaml  order_custom_pizza.yaml  order_drinks.yaml  order_predefined_pizza.yaml  pizza_qa.yaml  pizza_type.yaml  top_level.yaml
examples/yaml/pizza-order-simple/: calculate_price.yaml  order_drinks.yaml  pizza_qa.yaml  top_level.yaml
examples/yaml/pizza-shop/: drink_order.yaml  output.txt  pizza_size.yaml  pizza_toppings.yaml  top_level.yaml
examples/yaml/smart_calculator/: calculator.yaml  (+1 more)
issues/: infinite_loop.txt  qa_module_breaks.txt
src/: engine.py  eval.py  main.py  modules.py  mutator.py  recording.py  run_examples.py  serve.py  spec.py  utils.py
src/extensions/: extension.py
src/server/: __init__.py
src/testing/: reader.py  test_engine.py  test_model.py
taskyto/: main.py  mutator.py  recording.py  run_examples.py  serve.py  spec.py
taskyto/extensions/: extension.py
taskyto/server/: __init__.py
taskyto/testing/: reader.py  test_config_model.py  test_engine.py  test_model.py
tests/: base_test.py  test_common.py  test_engine.py  test_eval.py  test_formatters.py  test_server.py  test_yamls.py
tests/test_utils/: __init__.py
(+89 files in other folders)
